# modmath-rs

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_CLAUDE.md  ANALYSIS_CODEX.md  ANALYSIS_GEMINI.md  ANALYSIS_GEMINI2.md  CIOS_TRAIT_DRAFT.md  CLAUDE_ROUNDUP.md  CODEX_ROUNDUP.md  Cargo.toml  GEMINI2_ROUNDUP.md  GEMINI_ROUNDUP.md  HOW_TO_FIX.md  NONZERO_LEVERAGE.md  PANIC_FREE_REQUESTS.md  README.md  SYNTHESIS_CLAUDE.md  SYNTHESIS_CODEX.md  SYNTHESIS_GEMINI.md  SYNTHESIS_GEMINI2.md  TODO.md  cios_trait_placement.md  codex_typestate_1.md  const_num_traits_synthesis_review_1.md  const_num_traits_synthesis_review_2.md  const_num_traits_synthesis_review_3.md  const_num_traits_typestate_review_1.md  const_num_traits_typestate_review_2.md  const_num_traits_typestate_review_3.md  const_num_traits_typestate_synthesis.md  gemini_typestate_1.md  gemini_typestate_2.md  typestate_followup_canonical_and_prime.md  typestate_synthesis.md
.github/workflows/: coverage.yml  cross.yaml  ct-ctgrind.yml  ct-verify.yml  pre-commit.yaml  rust.yaml
ct-verify/: README.md
ct-verify/ct-ctgrind/: Cargo.toml  Dockerfile
ct-verify/ct-ctgrind/src/: fixtures.rs  macros.rs  main.rs
ct-verify/ct-ctgrind/src/valgrind/: real.rs  stub.rs
ct-verify/ct-driver/: Cargo.toml
ct-verify/ct-driver/src/: main.rs  mnemonics.rs  parse.rs  target.rs
ct-verify/ct-fixtures/: Cargo.toml
ct-verify/ct-fixtures/src/: fixtures_asym.rs  fixtures_core.rs  fixtures_field.rs  fixtures_neg.rs  lib.rs
ct-verify/cyccnt-hardware/: Cargo.toml  README.md  embedded-measure.toml  krabi-caliper.toml
ct-verify/cyccnt-hardware/src/: main.rs
ct-verify/panic-free-audit/: Cargo.toml  check.sh
ct-verify/panic-free-audit/src/: lib.rs
modmath/: Cargo.toml
modmath-cios/: Cargo.toml  README.md
modmath-cios/src/: lib.rs
modmath/src/: add.rs  exp.rs  field.rs  instrument.rs  inv.rs  lib.rs  mul.rs  nonct.rs  parity.rs  strictest.rs  sub.rs  test_carrier.rs  wide_mul.rs
modmath/src/basic/: mod.rs  montgomery.rs
modmath/src/constrained/: mod.rs  montgomery.rs
modmath/src/inv/: safegcd.rs  signed.rs
modmath/src/montgomery/: basic_mont.rs  cios.rs  constrained_mont.rs  mod.rs  strict_mont.rs
modmath/src/strict/: mod.rs  montgomery.rs
notes/: CONSTANT_TIME_HARDENING_PLAN.md
