[package]
name = "modmath"
version = "0.5.0"
edition = "2024"
description = """
Modular math implemented with traits.
"""
repository = "https://github.com/kaidokert/modmath-rs"
readme = "../README.md"
authors = ["kaidokert <kaidokert@gmail.com>"]
license = "Apache-2.0"
exclude = ["/.github/*"]
keywords = ["numerics", "bignum"]

[dependencies]
c0nst = { version = "0.2", optional = true }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1", default-features = false, optional = true }
const-num-traits = { version = "0.2", default-features = false, features = ["ct"] }
# Leaf crate + registry-only (no path) so `CiosRowOps` has exactly one
# identity everywhere — modmath, its test binaries, and fixed-bigint's
# dev-dep all resolve the same copy.
modmath-cios = { version = "0.1" }

[dev-dependencies]
fixed-bigint = { version = "0.5", default-features = false, features = ["cios"] }
# Third-party bigint backends (num-bigint, bnum, crypto-bigint, ibig and
# their `_patched` forks) are temporarily disabled while modmath migrates
# to `const-num-traits`. Re-enable once those backends grow
# `const-num-traits` impls (or an adapter shim).
# num-bigint = { package = "num-bigint", version = "0.4"}
# num-bigint_patched = { package = "num-bigint", git = "https://github.com/kaidokert/num-bigint.git" , tag = "v0.4.6_patch" }
# bnum = { version = "0.12", features = ["numtraits"] }
# bnum_patched = { package = "bnum",features = ["numtraits"]  , git = "https://github.com/kaidokert/bnum.git", tag = "v0.12.1_patch" }
# crypto-bigint = "0.6"
# crypto-bigint_patched = { package = "crypto-bigint", git = "https://github.com/kaidokert/crypto-bigint.git" , tag = "v0.6.1_rsa_patch_1" }
# ibig = "0.3"
# ibig_patched = { package = "ibig", git = "https://github.com/kaidokert/ibig-rs.git" , tag = "v0.3.6_patch" }
paste = "1"

[features]
default = []
constrained = []
basic = []
strict = []
nightly = ["dep:c0nst", "c0nst/nightly", "const-num-traits/nightly"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
features = ["zeroize"]
