[package]
name = "modmath"
version = "0.6.0"
edition = "2024"
description = """
Modular math implemented with traits.
"""
repository = "https://github.com/kaidokert/modmath-rs"
readme = "../README.md"
authors = ["kaidokert <kaidokert@gmail.com>"]
license = "Apache-2.0"
exclude = ["/.github/*"]
keywords = ["numerics", "bignum"]

[dependencies]
c0nst = { version = "0.2", optional = true }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1", default-features = false, optional = true }
const-num-traits = { git = "https://github.com/kaidokert/num-traits.git", tag = "v0.2.1-alpha.1", default-features = false, features = ["ct"] }
# Leaf crate + registry-only (no path) so `CiosRowOps` has exactly one
# identity everywhere — modmath, its test binaries, and fixed-bigint's
# dev-dep all resolve the same copy.
modmath-cios = { version = "0.1" }

[dev-dependencies]
# Experiment: fixed-bigint 0.6-alpha exposes HeaplessBigInt (fixed
# capacity, runtime length) behind heapless-runtime-len. Pulled as a
# git tag to add it to the backend test matrix. Move back to a plain
# registry version when done experimenting.
fixed-bigint = { git = "https://github.com/kaidokert/fixed-bigint-rs.git", tag = "v0.6.0-alpha.21", default-features = false, features = ["cios", "heapless-runtime-len"] }
# Third-party bigint backends. The `_patched` kaidokert forks carry
# const-num-traits 0.2 + modmath-cios impls (proven end-to-end in the
# krabitls backend-swap experiments), so their test matrices are live
# again. Upstream (unforked) crates and num-bigint/ibig stay disabled:
# no const-num-traits impls upstream; ibig is blocked architecturally.
bnum_patched = { package = "bnum", git = "https://github.com/kaidokert/bnum.git", tag = "v0.14.4-const-15", default-features = false }
crypto-bigint_patched = { package = "crypto-bigint", git = "https://github.com/kaidokert/crypto-bigint.git", tag = "v0.7.5-const-15", default-features = false }
# num-bigint = { package = "num-bigint", version = "0.4"}
# num-bigint_patched = { package = "num-bigint", git = "https://github.com/kaidokert/num-bigint.git" , tag = "v0.4.6_patch" }
# ibig = "0.3"
# ibig_patched = { package = "ibig", git = "https://github.com/kaidokert/ibig-rs.git" , tag = "v0.3.6_patch" }
paste = "1"

[features]
default = []
constrained = []
basic = []
strict = []
nightly = ["dep:c0nst", "c0nst/nightly", "const-num-traits/nightly"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
features = ["zeroize"]
