[package]
name = "ct-ctgrind"
version = "0.0.0"
edition = "2024"
rust-version = "1.86"
publish = false
description = "Valgrind taint-based CT verifier for modmath primitives."

[[bin]]
name = "ct-ctgrind"
path = "src/main.rs"

[dependencies]
# Link the fixtures as a Rust rlib so this binary can call each
# `extern "C"` symbol directly.
ct-fixtures = { path = "../ct-fixtures" }

krabi-caliper = { version = "0.1", features = ["ctgrind"] }
