[package]
name = "ct-fixtures"
version = "0.0.0"
edition = "2024"
rust-version = "1.86"
publish = false
description = "Inspection fixtures for the modmath CT-verify harness."

# rlib is all the taint layer (ct-ctgrind) needs. The future asm-grep
# layer adds staticlib + a no_std panic-handler feature; the fixture
# bodies are written core-only so that flip stays mechanical.
[lib]
crate-type = ["rlib"]

[dependencies]
modmath = { path = "../../modmath" }
# Registry, not path — matches modmath's own dep so the CiosRowOps
# trait identity stays single (a path copy of fixed-bigint would pull
# a second modmath-cios and split it).
fixed-bigint = { version = "0.4", default-features = false, features = ["cios"] }
const-num-traits = { version = "0.1.1", default-features = false, features = ["ct"] }
subtle = { version = "2.6", default-features = false }
