[package]
name = "ct-fixtures"
version = "0.0.0"
edition = "2024"
rust-version = "1.86"
publish = false
description = "Inspection fixtures for the modmath CT-verify harness."

# staticlib for the asm-grep driver (embedded targets emit a .a we can
# disassemble without a linker script or runtime); rlib for ct-ctgrind,
# which links the same symbols as a normal Rust dependency.
[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
# no_std + a local #[panic_handler], required for the cross-built
# staticlib (bare-metal targets have no std to supply one). Deliberately
# NOT default: ct-ctgrind links this crate into a std binary where a
# second panic handler would collide, and the asm-grep driver shells out
# to its own `cargo build --features panic-handler`, so the two builds
# never share a feature resolution.
panic-handler = []

[dependencies]
modmath = { path = "../../modmath" }
# Registry, not path — matches modmath's own dep so the CiosRowOps
# trait identity stays single (a path copy of fixed-bigint would pull
# a second modmath-cios and split it).
fixed-bigint = { git = "https://github.com/kaidokert/fixed-bigint-rs.git", branch = "experiment/const-num-traits-0.2", default-features = false, features = ["cios"] }
const-num-traits = { version = "0.2", default-features = false, features = ["ct"] }
subtle = { version = "2.6", default-features = false }
