[package]
name = "modmath-cyccnt-hardware"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
ct-fixtures = { path = "../ct-fixtures", features = ["panic-handler"] }
embedded-measure = { version = "0.1", features = ["cortex-m", "paired", "rtt"] }
